--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,5 +31,6 @@ repositories {
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
+    compile fileTree(dir: "libs", include: ["*.jar"])
 }
   
